2012-12-05  Kostya Serebryany  <kcc@google.com>

	* All files: Merge from upstream r169371.

2012-12-04  Kostya Serebryany  <kcc@google.com>
            Jack Howarth <howarth@bromo.med.uc.edu>

	PR 55521/sanitizer
	* configure.ac: Define USING_MAC_INTERPOSE when on darwin.
	* Makefile.am: Don't build interception subdir when
	USING_MAC_INTERPOSE defined.
	* asan/Makefile.am: Pass -DMAC_INTERPOSE_FUNCTIONS and
	-DMISSING_BLOCKS_SUPPORT when USING_MAC_INTERPOSE defined.
	Compile asan_interceptors_dynamic.cc but not libinterception
	when USING_MAC_INTERPOSE defined.
	* interception/Makefile.am: Remove usage of USING_MACH_OVERRIDE.
	* configure: Regenerated.
	* Makefile.in: Likewise.
	* asan/Makefile.in: Likewise.
	* interception/Makefile.in: Likewise.
	* asan/asan_intercepted_functions.h: Use MISSING_BLOCKS_SUPPORT.
	* asan/asan_mac.cc: Likewise.
	* asan/dynamic/asan_interceptors_dynamic.cc: Migrate from llvm
	and use MISSING_BLOCKS_SUPPORT.
	* merge.sh: Merge lib/asan/dynamic into asan/dynamic.
	* interception/mach_override/LICENSE.txt: Remove unused file.
	* interception/mach_override/mach_override.c: Likewise.
	* interception/mach_override/mach_override.h: Likewise.
	* interception/mach_override: Remove unused directory.

2012-11-28  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile.am (AM_MAKEFLAGS): Restore CC and CXX.
	* configure.ac (ACX_NONCANONICAL_TARGET): Removed.
	* asan/Makefile.am (AM_CXXFLAGS): Remove -I for libstdc++-v3 header
	files.
	(AM_MAKEFLAGS): Restore CC and CXX.
	* interception/Makefile.am: Likewise.
	* sanitizer_common/Makefile.am: Likewise.
	* tsan/Makefile.am: Likewise.
	* Makefile.in: Regenerated.
	* aclocal.m4: Likewise.
	* configure: Likewise.
	* asan/Makefile.in: Likewise.
	* interception/Makefile.in: Likewise.
	* sanitizer_common/Makefile.in: Likewise.
	* tsan/Makefile.in: Likewise.

2012-11-28  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile.am (AM_MAKEFLAGS): Remove CC and CXX.
	* configure.ac (ACX_NONCANONICAL_TARGET): New.