@@ -1,3 +1,7 @@
+2012-12-06  Kostya Serebryany  <kcc@google.com>
+
+	* All files: Merge from upstream r169392.
+
 2012-12-05  Kostya Serebryany  <kcc@google.com>
 
 	* All files: Merge from upstream r169371.
